# arrow-flightsql-odbc

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  renovate.json
.github/: renovate.json
.github/workflows/: docker-image.yml
deploy/: Dockerfile  odbc.ini
proto/: Flight.proto  FlightSql.proto
src/: arrow.flight.protocol.rs  arrow.flight.protocol.sql.rs  error.rs  flight_sql_command.rs  lib.rs  main.rs  myserver.rs  odbc_command_handler.rs  server.rs  server.rs.txt  util.rs
