[package]
name = "arrow-flightsql-odbc"
version = "0.3.0"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
edition = "2021"
description = "An Apache Arrow Flight SQL server which proxies requests over ODBC"
readme = "README.md"
repository = "https://github.com/timvw/arrow-flightsql-odbc"
license = "Apache-2.0"
keywords = ["apache-arrow", "flight-sql", "odbc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#odbc-api = "6.0.2"
arrow-odbc = "8.1.0"
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11" }
prost = "0.12"
prost-types = { version = "0.12.3" }
prost-derive = "0.12"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
arrow = { version = "51.0.0", features = ["prettyprint"] }
arrow-schema = "51.0.0"
futures-core = "0.3.30"
log = { version = "0.4.21", features = ["kv_unstable"] }
env_logger = "0.11.3"
tokio-stream = "0.1.15"
async-stream = "0.3.5"
tonic-reflection = "0.11.0"
anyhow = "1.0.81"
clap = { version ="4.5.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.6"

[build-dependencies]
tonic-build = "0.11"
