[package]
name = "arrow-flightsql-odbc"
version = "0.3.0"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
edition = "2021"
description = "An Apache Arrow Flight SQL server which proxies requests over ODBC"
readme = "README.md"
repository = "https://github.com/timvw/arrow-flightsql-odbc"
license = "Apache-2.0"
keywords = ["apache-arrow", "flight-sql", "odbc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#odbc-api = "6.0.2"
arrow-odbc = "12.0.0"
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.12" }
prost = "0.13"
prost-types = { version = "0.13.0" }
prost-derive = "0.13"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
arrow = { version = "53.0.0", features = ["prettyprint"] }
arrow-schema = "53.0.0"
futures-core = "0.3.21"
log = { version = "0.4.17", features = ["kv_unstable"] }
env_logger = "0.11.0"
tokio-stream = "0.1.8"
async-stream = "0.3.3"
tonic-reflection = "0.12.0"
anyhow = "1.0.57"
clap = { version ="4.0.0", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.1"

[build-dependencies]
tonic-build = "0.12"
